chore: sort code and logic fixes